--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "8081:8080"
       - "8085:8085"
     restart: always
-    command: []
+    command: [ ]
 
   redis:
     image: redis:latest
@@ -29,6 +29,7 @@ services:
       SPRING_REDIS_PORT: 6379
       SPRING_MAIL_HOST: mail-server
       SPRING_MAIL_PORT: 2500
+      OTP_SECRET: HgaaZL2WF2tgTKRF6s7CUYipUysQPn20
     depends_on:
       - redis
       - mailslurper
