--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'maven-publish'
     id 'org.springframework.boot' version '3.4.0'
     id 'io.spring.dependency-management' version '1.1.6'
 }
@@ -34,6 +35,27 @@ dependencies {
     annotationProcessor libpacks.annotationProcessor
     testImplementation libpacks.test.implementation
     testRuntimeOnly libpacks.test.runtimeOnly
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "Github"
+            url = uri("https://maven.pkg.github.com/Sakerini/email-mfa")
+            credentials {
+                username = findProperty("github.username")
+                password = findProperty("github.token")
+            }
+        }
+    }
+    publications {
+        register("jar", MavenPublication) {
+            from(components["java"])
+            pom {
+                url.set("https://github.com/Sakerini/email-mfa.git")
+            }
+        }
+    }
 }
 
 tasks.named('test') {
