--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -16,6 +16,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+      actions: write
+      id-token: write
 
     steps:
       - uses: actions/checkout@v4
