--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,7 @@ dependencies {
 publishing {
     repositories {
         maven {
-            name = "Github"
-            url = uri("https://maven.pkg.github.com/Sakerini/email-mfa")
+            url = uri("https://maven.pkg.github.com/${project.findProperty('github.repository_owner') ?: System.getenv('GITHUB_REPOSITORY_OWNER')}/${project.findProperty('github.repository') ?: System.getenv('GITHUB_REPOSITORY')}")
             credentials {
                 username = project.findProperty("github.actor") ?: System.getenv("GITHUB_ACTOR")
                 password = project.findProperty("github.token") ?: System.getenv("GITHUB_TOKEN")
@@ -52,7 +51,7 @@ publishing {
         register("jar", MavenPublication) {
             from(components["java"])
             pom {
-                url.set("https://github.com/Sakerini/email-mfa.git")
+                url.set("https://github.com/${project.findProperty('github.repository_owner') ?: System.getenv('GITHUB_REPOSITORY_OWNER')}/${project.findProperty('github.repository') ?: System.getenv('GITHUB_REPOSITORY')}.git")
             }
         }
     }
