--- a/build.gradle
+++ b/build.gradle
@@ -40,10 +40,11 @@ dependencies {
 publishing {
     repositories {
         maven {
+            name = "GitHubPackages"
             url = uri("https://maven.pkg.github.com/${System.getenv('GITHUB_REPOSITORY_OWNER')}/${System.getenv('GITHUB_REPOSITORY')}")
             credentials {
-                username = System.getenv("GITHUB_ACTOR")
-                password = System.getenv("GH_TOKEN")
+                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+                password = project.findProperty("gpr.token") ?: System.getenv("GITHUB_TOKEN")
             }
         }
     }
